tests/idris2/perror006/expected
1/1: Building PError (PError.idr)
Error: Expected 'else'.

PError.idr:7:1--7:2
 3 | 
 4 | bar : Int -> Int
 5 | bar x = if x == 95 then 0
 6 | 
 7 | baz : Int -> Int
     ^

